--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -83,6 +83,12 @@
                 <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'project_share' project.id %}">
                     {% csrf_token %}
                     <div class="modal-body">
+                        <p>
+                            This will share the web view of the project.  This will not share the underlying Google cloud project
+                            and big query data needed if you wish to access this project outside of the website.  If you
+                            want to share your Google Cloud project with other users, please enter a support request at the <a href="">Google
+                            group</a>
+                        </p>
                         <label for="share-users">Enter email addresses separated by a comma</label>
                         <textarea class="form-control" name="share_users"></textarea>
                     </div>
