--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -2,6 +2,7 @@
 {% load cohort_filters %}
 {% load custom_tags %}
 {% load project_custom_tags %}
+{% load workbook_custom_tags %}
 
 <header class="navbar navbar-fixed-top site-header" role="header">
     <nav class="container">
@@ -77,7 +78,7 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'workbooks' %}">Saved Workbooks ( {{ user.workbook_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'workbooks' %}">Saved Workbooks ( {% user_workbook_count %} )</a></li>
                     <li class="menu-item">
                         <form action="{% url 'workbook_create' %}" method="POST">
                             {% csrf_token %}
@@ -121,7 +122,7 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'projects' %}">Saved Projects ( {{ user.project_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'projects' %}">Saved Projects ( {% user_project_count %} )</a></li>
                     <li class="menu-item"><a href="{% url 'project_upload' %}">Upload Project Data</a></li>
                     <li class="menu-item"><a href="{% url 'public_projects' %}">Public Projects ( {% public_project_count %} )</a></li>
                 </ul>
