Add/remove cohorts from worksheets

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -246,3 +246,7 @@
     color: #fff
     font-family: sans-serif
     padding: 3px 7px
+
+#cohort-apply-to-workbook
+    .btn
+        margin-right: 10px
