--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -85,6 +85,12 @@
       opacity: 0.8
       margin-top: 5px
 
+    .workbook-remove-item
+      border: none
+      padding: 2px
+      margin-right: 4px
+      background: none
+
   &-content
     float: left
     width: 75%
