--- a/templates/variables/variables_select.html
+++ b/templates/variables/variables_select.html
@@ -17,7 +17,7 @@
             <li><a href="{% url 'worksheet_display' workbook_id=workbook.id worksheet_id=worksheet.id %}">{{ workbook.name }}</a></li>
         {% endif %}
     </ol>
-    <h1 class="page-header pull-left">Saved Variable Favorites</h1>
+    <h1 class="page-header pull-left">Data Source | Variable Favorites</h1>
 </div>
 {% endblock %}
 {% block content %}
