--- a/templates/workbooks/workbook_list.html
+++ b/templates/workbooks/workbook_list.html
@@ -69,7 +69,8 @@
                 {% include 'workbooks/workbook_modals.html' %}
             {% endfor %}
             {% else %}
-                <p>You don't have any saved workbooks yet</p>
+                <br>
+                <p class="center">You don't have any workbooks created yet.</p>
             {% endif %}
         </div>
     </div>
