Added links to landing page

--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -46,8 +46,9 @@
             <div class="landing-block">
                 <h3>Useful Links</h3>
                 <ul>
-                    <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Code Repository</a></li>
-                    <li><a href="{% url 'help' %}">Documentation</a></li>
+                    <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Web Application Code Repository</a></li>
+                    <li><a target="_blank" href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/">Help and Documentation</a></li>
+                    <li><a target="_blank" href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/feedback">Send feedback</a></li>
 {#                    <li><a href="#">Policies and Guidelines</a></li>#}
                 </ul>
             </div>
