Edited list of links on front page.

--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -46,17 +46,16 @@
             <div class="landing-block">
                 <h3>Useful Links</h3>
                 <ul>
-
                     <li><a target="_blank" href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/">Help and Documentation</a></li>
                     <li><a target="_blank" href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/feedback">Send feedback</a></li>
-{#                    <li><a href="#">Policies and Guidelines</a></li>#}
                 </ul>
 
                 <h3>Code Repositories and Examples</h3>
                 <ul>
-                    <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Web Application Code Repository</a></li>
                     <li><a target="_blank" href="https://github.com/isb-cgc/examples-R">Computational Examples using R</a></li>
                     <li><a target="_blank" href="https://github.com/isb-cgc/examples-Python">Computational Examples using Python</a></li>
+                    <li><a target="_blank" href="https://github.com/isb-cgc/examples-Compute">Computational Examples using Common Workflow Language</a></li>
+                    <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Web Application Code Repository</a></li>
                 </ul>
             </div>
 
