--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                             {{ user.first_name }} <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-label="user-dropdown">
-                            <li role="menuitem"><a href="{% url 'help' %}"><i class="fa fa-question"></i> Help</a></li>
+                            <li role="menuitem"><a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/"><i class="fa fa-question"></i> Help</a></li>
                             <li role="menuitem"><a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/feedback" target="_blank"><i class="fa fa-comment"></i> Feedback</a></li>
                             <li role="menuitem"><a href="#logout-modal" data-toggle="modal" data-target="#logout-modal" title="Sign Out"><i class="fa fa-sign-out"></i> Sign Out</a></li>
                         </ul>
