added spinner to new cohort creation mosaics

--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -184,6 +184,7 @@
                 <h4>Clinical Features</h4>
             </div>
             <div class="panel-body">
+                <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                 <div id="tree-graph-clinical"></div>
             </div>
             <div id="more-graphs"><button class="btn btn-default" role="button">Show More</button></div>
