--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -225,14 +225,16 @@
                             {% if workbook.owner.id == user.id %}
                             <h5>Analysis Type</h5>
                             <div class="form-group gray-area">
-                                <select id="plot_selection" class="form-control">
-                                    {% if worksheet.selected_plot %}
-                                        <option value="{{ worksheet.selected_plot }}" selected >{{ worksheet.selected_plot }}</option>
+                                <select worksheet_id="{{ worksheet.id }}" class="form-control plot_selection">
+                                    {% if worksheet.active_plot %}
+                                        <option value="{{ worksheet.active_plot.type }}" selected >{{ worksheet.active_plot.type }}</option>
                                     {% else %}
                                         <option disabled hidden selected >-- select an analysis --</option>
                                     {% endif %}
-                                    {% for graph in plot_types %}
-                                        <option value="{{ graph.name }}">{{ graph.name }}</option>
+                                    {% for plot in plot_types %}
+                                        {% if not worksheet.active_plot or plot.name != worksheet.active_plot.type %}
+                                            <option value="{{ plot.name }}">{{ plot.name }}</option>
+                                        {% endif %}
                                     {% endfor %}
                                 </select>
                             </div>
@@ -241,8 +243,8 @@
                                 <!-- plot needs to indicate saved plot data such as selected variables, cohorts, title, etc -->
                                 <!-- workbook_plot also needs to have reference to all worksheet cohorts, variables and genes -->
                             </div>
-                            {% elif worksheet.selected_plot %}
-                            <h5>Analysis Type: {{ worksheet.selected_plot }}</h5>
+                            {% elif worksheet.active_plot %}
+                            <h5>Analysis Type: {{ worksheet.active_plot.type }}</h5>
                             <div class="plot-container">
                                 {% include 'workbooks/workbook_plot.html' with plot=worksheet.plot variables=worksheet.variables cohorts=worksheet.cohorts %}
                                 <!-- plot needs to indicate saved plot data such as selected variables, cohorts, title, etc -->
@@ -292,9 +294,10 @@
 {% include "workbooks/workbook_modals.html" %}
 
 <script type="text/javascript">
-    var base_api_url = '{{ base_api_url|safe }}';
-    var base_url = '{{ base_url|safe }}';
-    var display_worksheet = '{{ display_worksheet.id|safe }}';
+    var base_api_url            = '{{ base_api_url|safe }}';
+    var base_url                = '{{ base_url|safe }}';
+    var display_worksheet_id    = '{{ display_worksheet.id|safe }}';
+    var workbook_id             = '{{ workbook.id }}';
 
     //plot specific variables
 {#    var plots_data = {{ plots_data|safe }};#}
