--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -229,7 +229,7 @@
                                     {% if worksheet.active_plot %}
                                         <option value="{{ worksheet.active_plot.type }}" selected >{{ worksheet.active_plot.type }}</option>
                                     {% else %}
-                                        <option disabled hidden selected >-- select an analysis --</option>
+                                        <option disabled selected >-- select an analysis --</option>
                                     {% endif %}
                                     {% for plot in plot_types %}
                                         {% if not worksheet.active_plot or plot.name != worksheet.active_plot.type %}
@@ -239,7 +239,7 @@
                                 </select>
                             </div>
                             <div class="plot-container">
-                                {% include 'workbooks/workbook_plot.html' with plot=worksheet.plot variables=worksheet.variables cohorts=worksheet.cohorts %}
+                                {% include 'workbooks/workbook_plot.html' with plot=worksheet.active_plot variables=worksheet.variables cohorts=worksheet.cohorts %}
                                 <!-- plot needs to indicate saved plot data such as selected variables, cohorts, title, etc -->
                                 <!-- workbook_plot also needs to have reference to all worksheet cohorts, variables and genes -->
                             </div>
